--- a/index.html
+++ b/index.html
@@ -19,31 +19,36 @@
     <div id="home_block_wrapper">
 			<ul id="home_content_list">
 				<li id="home_li_1" class="home_li">
-    				<div class="jumbotron" id="internal">
+    				<div class="jumbotron" id="aca">
   						<h1>About the ACA</h1>
-  						<p>...</p>
-  						<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
 					</div>
+                    <div class="section">
+            			<h2> The Affordable Care Act</h2>
+                		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           			 </div>
                 </li>
                 <li id="home_li_2" class="home_li">
-    				<div class="jumbotron" id="internal">
+    				<div class="jumbotron" id="ade">
   						<h1>Advanced Double Electric</h1>
-  						<p>...</p>
-  						<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
 					</div>
                 </li>
                 <li id="home_li_3" class="home_li">
-    				<div class="jumbotron" id="internal">
+    				<div class="jumbotron" id="where">
   						<h1>Where To Find</h1>
-  						<p>...</p>
-  						<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
 					</div>
                 </li>
                 <li id="home_li_4" class="home_li">
-    				<div class="jumbotron" id="internal">
+    				<div class="jumbotron" id="faq">
   						<h1>FAQs</h1>
-  						<p>...</p>
-  						<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
 					</div>
                 </li>
             </ul>
