--- a/index.html
+++ b/index.html
@@ -10,49 +10,50 @@
 
 <body>
 <div class="inner_body">
-	<ul class="nav nav-tabs nav-justified">
-  		<li role="presentation" class="side_link side_link_active" home_link="1"><a href="#">About The ACA</a></li>
-  		<li role="presentation" class="side_link" home_link="2"><a href="#">Advanced Double Electric</a></li>
-  		<li role="presentation" class="side_link" home_link="3"><a href="#">Where To Find</a></li>
-        <li role="presentation" class="side_link" home_link="4"><a href="#">FAQs</a></li>
+	<ul class="nav nav-tabs nav-justified" role="tablist">
+  		<li role="presentation" class="active"><a href="#aca" aria-controls="aca" role="tab" data-toggle="tab">About The ACA</a></li>
+  		<li role="presentation"><a href="#ade" aria-controls="ade" role="tab" data-toggle="tab">Advanced Double Electric</a></li>
+  		<li role="presentation"><a href="#where" aria-controls="where" role="tab" data-toggle="tab">Where To Find</a></li>
+        <li role="presentation"><a href="#faq" aria-controls="faq" role="tab" data-toggle="tab">FAQs</a></li>
 	</ul>
-    <div id="home_block_wrapper">
-			<ul id="home_content_list">
-				<li id="home_li_1" class="home_li">
-    				<div class="jumbotron" id="aca">
-  						<h1>About the ACA</h1>
-  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
-					</div>
-                    <div class="section">
-            			<h2> The Affordable Care Act</h2>
-                		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+    
+    <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="aca">
+    	<div class="jumbotron" id="aca">
+  			<h1>About the ACA</h1>
+  			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+		</div>
+        <div class="section">
+            <h2> The Affordable Care Act</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
                         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
                         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-           			 </div>
-                </li>
-                <li id="home_li_2" class="home_li">
-    				<div class="jumbotron" id="ade">
-  						<h1>Advanced Double Electric</h1>
-  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
-					</div>
-                </li>
-                <li id="home_li_3" class="home_li">
-    				<div class="jumbotron" id="where">
-  						<h1>Where To Find</h1>
-  						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
-					</div>
-                </li>
-                <li id="home_li_4" class="home_li">
-    				<div class="jumbotron" id="faq">
-  						<h1>FAQs</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
-					</div>
-                </li>
-            </ul>
-     </div>
+        </div>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="ade">
+    	<div class="jumbotron" id="ade">
+  			<h1>Advanced Double Electric</h1>
+  			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+		</div>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="where">
+    	<div class="jumbotron" id="where">
+  			<h1>Where To Find</h1>
+  			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+		</div>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="faq">
+    <div class="jumbotron" id="faq">
+  		<h1>FAQs</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+	</div>
+    </div>
+  </div>
+    
 </div>
 </body>
 <script src="./js/custom.js"></script>
