clean up aca start where to find

--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 <body>
 <div class="inner_body">
 	<ul class="nav nav-tabs nav-justified" role="tablist">
-  		<li role="presentation" class="active"><a href="#aca" aria-controls="aca" role="tab" data-toggle="tab">About The ACA</a></li>
-  		<li role="presentation"><a href="#ade" aria-controls="ade" role="tab" data-toggle="tab">Advanced Double Electric</a></li>
-  		<li role="presentation"><a href="#where" aria-controls="where" role="tab" data-toggle="tab">Where To Find</a></li>
-        <li role="presentation"><a href="#faq" aria-controls="faq" role="tab" data-toggle="tab">FAQs</a></li>
+  		<li class="active"><a href="#aca" aria-controls="aca" role="tab" data-toggle="tab">About The ACA</a></li>
+  		<li><a href="#ade" aria-controls="ade" role="tab" data-toggle="tab">Advanced Double Electric</a></li>
+  		<li><a href="#where" aria-controls="where" role="tab" data-toggle="tab">Where To Find</a></li>
+        <li><a href="#faq" aria-controls="faq" role="tab" data-toggle="tab">FAQs</a></li>
 	</ul>
     
     <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="aca">
-    	<div class="jumbotron" id="aca">
-  			<h1>About the ACA</h1>
+    	<div class="myjumbo" id="aca">
+        <img src="./img/aca-jumbo.png">
+        	<h1>About the ACA</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
-		</div>
+        </div>
         <div class="section">
             <h2> The Affordable Care Act</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
@@ -52,16 +53,16 @@
               <div class="box4">
                 <img src="img/aca-pump4.png">
               </div>
-              <div class="occasional1">
+              <div class="occasional">
                 <p>occasional use</p>
                   </div>
-                  <div class="occasional2">
+                  <div class="occasional">
                 <p>occasional use</p>
                   </div>
-                <div class="frequent1">
+                <div class="frequent">
                 <p>frequent use</p>
                   </div>
-                <div class="frequent2">
+                <div class="frequent">
                 <p>frequent use</p>
                   </div>
                 <div class="learnmore">
@@ -73,26 +74,64 @@
                 <div class="learnmore">
                   <p>learn more</p>
                 </div>
-                <div class="learnmore2">
+                <div class="learnmore">
                   <p>learn more</p>
                 </div>
           </div>
         </div>
     </div>
     <div role="tabpanel" class="tab-pane" id="ade">
-    	<div class="jumbotron" id="ade">
+    	<div class="myjumbo" id="ade">
+        <img src="./img/aca-jumbo.png">
   			<h1>Advanced Double Electric</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
 		</div>
     </div>
     <div role="tabpanel" class="tab-pane" id="where">
-    	<div class="jumbotron" id="where">
+    	<div class="myjumbo" id="where">
+        <img src="./img/where-jumbo.png">
   			<h1>Where To Find</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+            <select name="insurance">
+            	<option>Select an Insurance Provider</option>
+                <option>Lorem Ipsum</option>
+                <option>Lorem Ipsum</option>
+                <option>Lorem Ipsum</option>
+            </select><br>
+            <select name="state">
+            	<option>Select a State</option>
+                <option>Lorem Ipsum</option>
+                <option>Lorem Ipsum</option>
+                <option>Lorem Ipsum</option>
+            </select>
 		</div>
+        <div class="section">
+        	<h2>Our Local Breast Pump Suppliers</h2>
+        </div>
+        <div class="suppliers">
+        	<div class="flexbox">
+            	<h3>Georgia</h3>
+            </div>
+            <div class="flexbox">
+            	<h3>Georgia</h3>
+            </div>
+            <div class="flexbox">
+            	<h3>Georgia</h3>
+            </div>
+            <div class="flexbox">
+            	<h3>Georgia</h3>
+            </div>
+            <div class="flexbox">
+            	<h3>Georgia</h3>
+            </div>
+            <div class="flexbox">
+            	<h3>Georgia</h3>
+            </div>
+        </div>
     </div>
     <div role="tabpanel" class="tab-pane" id="faq">
-    <div class="jumbotron" id="faq">
+    <div class="myjumbo" id="faq">
+        <img src="./img/aca-jumbo.png">
   		<h1>FAQs</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
 	</div>
