more where to find and faq pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="./css/style.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -93,7 +94,7 @@
   			<h1>Where To Find</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
             <select name="insurance">
-            	<option>Select an Insurance Provider</option>
+            	<option>Select an Insurance Provider<i class="fa fa-caret-down" aria-hidden="true"></i></option>
                 <option>Lorem Ipsum</option>
                 <option>Lorem Ipsum</option>
                 <option>Lorem Ipsum</option>
@@ -109,31 +110,50 @@
         	<h2>Our Local Breast Pump Suppliers</h2>
         </div>
         <div class="suppliers">
-        	<div class="flexbox">
-            	<h3>Georgia</h3>
+        	 <div class="boxrow" id="initial">
+            	<h4>NATIONAL PROVIDER</h4>
+                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
+                <span>229-253-0067</span><br>
+                <p class="more"><a href="#">More Information</a></p>
             </div>
-            <div class="flexbox">
-            	<h3>Georgia</h3>
+            <div class="boxrow">
+            	<h4>NATIONAL PROVIDER</h4>
+                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
+                <span>229-253-0067</span><br>
+                <p class="more"><a href="#">More Information</a></p>
             </div>
-            <div class="flexbox">
-            	<h3>Georgia</h3>
+            <div class="boxrow">
+            	<h4>NATIONAL PROVIDER</h4>
+                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
+                <span>229-253-0067</span>
+                <p class="more"><a href="#">More Information</a></p>
             </div>
-            <div class="flexbox">
-            	<h3>Georgia</h3>
+            <div class="boxrow">
+            	<h4>NATIONAL PROVIDER</h4>
+                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
+                <span>229-253-0067</span>
+                <p class="more"><a href="#">More Information</a></p>
             </div>
-            <div class="flexbox">
-            	<h3>Georgia</h3>
+            <div class="boxrow">
+            	<h4>NATIONAL PROVIDER</h4>
+                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
+                <span>229-253-0067</span>
+                <p class="more"><a href="#">More Information</a></p>
             </div>
-            <div class="flexbox">
-            	<h3>Georgia</h3>
+            <div class="boxrow">
+            	<h4>NATIONAL PROVIDER</h4>
+                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
+                <span>229-253-0067</span>
+                <p class="more"><a href="#">More Information</a></p>
             </div>
         </div>
     </div>
     <div role="tabpanel" class="tab-pane" id="faq">
     <div class="myjumbo" id="faq">
-        <img src="./img/aca-jumbo.png">
-  		<h1>FAQs</h1>
+        <img src="./img/faq-jumbo.png">
+  		<h1>FAQ's</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+        <button class="jumbo">Learn More</button>
 	</div>
     </div>
   </div>
