fixed the dang boxes

--- a/index.html
+++ b/index.html
@@ -109,44 +109,42 @@
         <div class="section">
         	<h2>Our Local Breast Pump Suppliers</h2>
         </div>
-        <div class="suppliers">
-        	 <div class="boxrow" id="initial">
-            	<h4>NATIONAL PROVIDER</h4>
+        <div class="row">
+  			<div class="col-xs-6 col-md-3" id="initial">
+      			<h4>Georgia</h4>
+ 			</div>
+            <div class="col-xs-6 col-md-3">
+      			<h4>NATIONAL PROVIDER</h4>
                 <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
                 <span>229-253-0067</span><br>
                 <p class="more"><a href="#">More Information</a></p>
-            </div>
-            <div class="boxrow">
-            	<h4>NATIONAL PROVIDER</h4>
+ 			</div>
+            <div class="col-xs-6 col-md-3">
+      			<h4>NATIONAL PROVIDER</h4>
                 <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
                 <span>229-253-0067</span><br>
                 <p class="more"><a href="#">More Information</a></p>
-            </div>
-            <div class="boxrow">
-            	<h4>NATIONAL PROVIDER</h4>
+ 			</div>
+            <div class="col-xs-6 col-md-3">
+      			<h4>NATIONAL PROVIDER</h4>
                 <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
-                <span>229-253-0067</span>
+                <span>229-253-0067</span><br>
                 <p class="more"><a href="#">More Information</a></p>
-            </div>
-            <div class="boxrow">
-            	<h4>NATIONAL PROVIDER</h4>
+ 			</div>
+            <div class="col-xs-6 col-md-3">
+      			<h4>NATIONAL PROVIDER</h4>
                 <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
-                <span>229-253-0067</span>
+                <span>229-253-0067</span><br>
                 <p class="more"><a href="#">More Information</a></p>
-            </div>
-            <div class="boxrow">
-            	<h4>NATIONAL PROVIDER</h4>
+ 			</div>
+            <div class="col-xs-6 col-md-3">
+      			<h4>NATIONAL PROVIDER</h4>
                 <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
-                <span>229-253-0067</span>
+                <span>229-253-0067</span><br>
                 <p class="more"><a href="#">More Information</a></p>
-            </div>
-            <div class="boxrow">
-            	<h4>NATIONAL PROVIDER</h4>
-                <p><strong>Amerimed Pharmacy & Equiptment</strong></p>
-                <span>229-253-0067</span>
-                <p class="more"><a href="#">More Information</a></p>
-            </div>
-        </div>
+ 			</div>
+		</div>
+
     </div>
     <div role="tabpanel" class="tab-pane" id="faq">
     <div class="myjumbo" id="faq">
