--- a/index.html
+++ b/index.html
@@ -39,21 +39,22 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
                         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <div class="section2">
-              <div class="box1">
+          <div class="row">
+              <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump1.png">
               </div>
 
-              <div class="box2">
+              <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump2.png">
               </div>
-              <div class="box3">
+              <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump3.png">
               </div>
 
-              <div class="box4">
+              <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump4.png">
               </div>
+              
               <div class="occasional">
                 <p>occasional use</p>
                   </div>
