changing boxes to bootstrap col

--- a/index.html
+++ b/index.html
@@ -47,36 +47,36 @@
               <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump2.png">
               </div>
-              <div class="col-xs-6 col-md-3">
+              <div class="col-xs-6 col-md-3" id="small">
                 <img src="img/aca-pump3.png">
               </div>
 
-              <div class="col-xs-6 col-md-3">
+              <div class="col-xs-6 col-md-3" id="small">
                 <img src="img/aca-pump4.png">
               </div>
               
-              <div class="occasional">
+              <div class="col-xs-6 col-md-3" id="occasional">
                 <p>occasional use</p>
                   </div>
-                  <div class="occasional">
+                  <div class="col-xs-6 col-md-3" id="occasional">
                 <p>occasional use</p>
                   </div>
-                <div class="frequent">
+                <div class="col-xs-6 col-md-3" id="occasional">
                 <p>frequent use</p>
                   </div>
-                <div class="frequent">
+                <div class="col-xs-6 col-md-3" id="occasional">
                 <p>frequent use</p>
                   </div>
-                <div class="learnmore">
+                <div class="col-xs-6 col-md-3" id="learnmore">
                   <p>learn more</p>
                 </div>
-                <div class="learnmore">
+                <div class="col-xs-6 col-md-3" id="learnmore">
                   <p>learn more</p>
                 </div>
-                <div class="learnmore">
+                <div class="col-xs-6 col-md-3" id="learnmore">
                   <p>learn more</p>
                 </div>
-                <div class="learnmore">
+                <div class="col-xs-6 col-md-3" id="learnmore">
                   <p>learn more</p>
                 </div>
           </div>
