--- a/index.html
+++ b/index.html
@@ -42,20 +42,36 @@
           <div class="row">
               <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump1.png">
+                	<div class="caption">
+                    	<button class="occasional">occasional use</button>
+                        <button class="learnmore">learn more</button>
+                    </div>
               </div>
 
               <div class="col-xs-6 col-md-3">
                 <img src="img/aca-pump2.png">
+                <div class="caption">
+                    	<button class="occasional1">occasional use</button>
+                        <button class="learnmore1">learn more</button>
+                    </div>
               </div>
               <div class="col-xs-6 col-md-3" id="small">
                 <img src="img/aca-pump3.png">
+                <div class="caption">
+                    	<button class="occasional2">frequent use</button>
+                        <button class="learnmore2">learn more</button>
+                    </div>
               </div>
 
               <div class="col-xs-6 col-md-3" id="small">
                 <img src="img/aca-pump4.png">
+                <div class="caption">
+                    	<button class="occasional3">frequent use</button>
+                        <button class="learnmore3">learn more</button>
+                    </div>
               </div>
               
-              <div class="col-xs-6 col-md-3" id="occasional">
+              <!--<div class="col-xs-6 col-md-3" id="occasional">
                 <p>occasional use</p>
                   </div>
                   <div class="col-xs-6 col-md-3" id="occasional">
@@ -78,7 +94,7 @@
                 </div>
                 <div class="col-xs-6 col-md-3" id="learnmore">
                   <p>learn more</p>
-                </div>
+                </div>-->
           </div>
         </div>
     </div>
