--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="section">
         	<h2>Our Local Breast Pump Suppliers</h2>
         </div>
-        <div class="row">
+        <div class="row" id="where">
   			<div class="col-xs-6 col-md-3" id="initial">
       			<h4>Georgia</h4>
  			</div>
