--- a/index.html
+++ b/index.html
@@ -103,6 +103,54 @@
         <img src="./img/aca-jumbo.png">
   			<h1>Advanced Double Electric</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia wehicula nisl eu fermentum.</p>
+        </div>
+        <div class="section">
+            <h2> The Complete Solution</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="feature">
+                  <div class="block1">
+                    <img src="./img/block.png">
+                  <div class="text">
+                    <h3>Feature 1</h3>
+                    <p>
+                  </div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                </div>
+                <div class="feature">
+                  <div class="text2">
+                    <h3>Feature 2</h3>
+                    <p>
+                  </div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                </div>
+                  <div class="block2">
+                    <img src="./img/block.png">
+                  
+              </div>
+              <div class="feature">
+                  <div class="block1">
+                    <img src="./img/block.png">
+                  <div class="text">
+                    <h3>Feature 3</h3>
+                    <p>
+                  </div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                </div>
+                <div class="feature">
+                  <div class="text2">
+                    <h3>Feature 4</h3>
+                    <p>
+                  </div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+                </div>
+                  <div class="block2">
+                    <img src="./img/block.png">
+                  
+              </div>
+
+
+                </div>
 		</div>
     </div>
     <div role="tabpanel" class="tab-pane" id="where">
